--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/icon": "^1.8.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@pinia/nuxt": "^0.7.0",
     "@vercel/kv": "^3.0.0",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
@@ -20,6 +21,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.2",
     "nuxt": "^3.14.1592",
+    "pinia": "^2.2.6",
     "vue": "latest",
     "vue-chartjs": "^5.3.2",
     "vue-echarts": "^7.0.3",
