--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "seed": "bun run server/api/seeders/seed.mongodb.ts"
   },
   "dependencies": {
     "@nuxt/icon": "^1.8.2",
